--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,23 @@
   align-items: center;
   font-size: 1.5em;
   color: #f5f5f5;
+  padding: 20px 0;
+  gap: 20px;
+}
+
+.App-header .login-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+.App-header .memolist-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  margin-top: 50px;
 }
 
 .App-main {
@@ -35,10 +52,9 @@ button {
   margin: 10px 10px;
 }
 
-button.plus {
+.App-header button {
   background-color: #f5f5f5;
   color: #282c34;
-  padding: 8px 16px;
 }
 
 form {
